@@ -4,6 +4,7 @@ Jump Start Changelog
 2.0.0-beta3
 -----
 
+* Added theme support for `title-tag` in WP 4.1+
 * Darkened body text in WordPress page editor.
 * Added "tb_square_medium" crop size, 500x500.
 * Fixed issues with nag regarding Theme Options not matching Theme Base on initial theme install, with default Developer base selected.
